feat: integrate Atom certificate authentication
